Add add and remove bag to coffee shop endpoints
